<?xml version="1.0" encoding="utf-8"?>
<com.wei.android.lib.colorview.view.ColorLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/white"
    android:orientation="vertical"
    app:backgroundColorNormal="@color/white"
    app:cornerRadiusTopLeftNormal="@dimen/dp_10"
    app:cornerRadiusTopRightNormal="@dimen/dp_10">


    <FrameLayout
        style="@style/hh_fi_wr"
        android:layout_marginStart="@dimen/dp_16">

        <ImageView
            android:id="@+id/iv_popup_goods_img"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/dp_25"
            android:src="@drawable/goods_choose_default_img" />

        <ImageView
            android:id="@+id/iv_popup_goods_close"
            style="@style/hh_wr_wr"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dp_16"
            android:padding="9dp"
            android:src="@drawable/popup_close" />

        <LinearLayout
            style="@style/hh_fi_wr"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="117.5dp"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_popup_goods_price"
                style="@style/hh_fi_wr"
                android:text="28.8"
                android:textColor="@color/color_red"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_popup_goods_sp"
                style="@style/text_black_12_f_w"
                android:layout_marginTop="@dimen/dp_2" />

            <TextView
                android:id="@+id/tv_popup_goods_stock"
                style="@style/text_gray_12_f_w"
                android:layout_marginTop="@dimen/dp_5" />
        </LinearLayout>
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        style="@style/scrollView"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:maxHeight="400dp">

        <LinearLayout
            style="@style/hh_fi_wr"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_popup_goods_goods_sp"
                style="@style/hh_fi_wr"
                android:orientation="vertical" />

            <View
                style="@style/line_goods"
                android:layout_marginTop="@dimen/dp_10" />

            <LinearLayout
                android:id="@+id/ll_shop_detail_count"
                style="@style/hh_fi_wr"
                android:layout_marginTop="@dimen/dp_5"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="@dimen/dp_15"
                android:paddingBottom="10dp">

                <TextView
                    style="@style/text_black_14_w_w"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/goods_buy_count"
                    android:textStyle="bold" />

                <com.wei.android.lib.colorview.view.ColorTextView
                    android:id="@+id/tv_popup_goods_minus"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:gravity="center"
                    android:text="@string/goods_minus_sign"
                    android:textColor="@color/white"
                    app:backgroundColorNormal="@color/color_gray"
                    app:cornerRadiusNormal="@dimen/dp_20" />

                <TextView
                    android:id="@+id/tv_popup_goods_count"
                    style="@style/text_gray_12_w_w"
                    android:layout_marginStart="@dimen/dp_2"
                    android:layout_marginEnd="@dimen/dp_2"
                    android:gravity="center"
                    android:maxLength="6"
                    android:minWidth="30dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="5dp"
                    android:text="1" />

                <com.wei.android.lib.colorview.view.ColorTextView
                    android:id="@+id/tv_popup_goods_plus"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:gravity="center"
                    android:text="@string/goods_plus"
                    android:textColor="@color/white"
                    app:backgroundColorNormal="@color/main_green"
                    app:cornerRadiusNormal="@dimen/dp_20" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        style="@style/hh_fi_wr"
        android:layout_marginStart="11.5dp"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="@dimen/dp_20"
        android:orientation="horizontal">

        <com.wei.android.lib.colorview.view.ColorTextView
            android:id="@+id/tv_popup_goods_sure"
            style="@style/text_white_16_f_w"
            android:layout_height="36dp"
            android:gravity="center"
            android:text="@string/sure"
            android:visibility="gone"
            app:backgroundColorNormal="@color/color_green_light"
            app:cornerRadiusBottomLeftNormal="@dimen/dp_18"
            app:cornerRadiusBottomRightNormal="@dimen/dp_18"
            app:cornerRadiusTopLeftNormal="@dimen/dp_18"
            app:cornerRadiusTopRightNormal="@dimen/dp_18" />

        <com.wei.android.lib.colorview.view.ColorTextView
            android:id="@+id/tv_popup_goods_buy"
            style="@style/text_white_16_f_w"
            android:layout_height="36dp"
            android:gravity="center"
            android:text="@string/buy_at_once"
            android:visibility="gone"
            app:backgroundColorNormal="@color/color_green"
            app:cornerRadiusBottomLeftNormal="@dimen/dp_18"
            app:cornerRadiusBottomRightNormal="@dimen/dp_18"
            app:cornerRadiusTopLeftNormal="@dimen/dp_18"
            app:cornerRadiusTopRightNormal="@dimen/dp_18" />

        <com.wei.android.lib.colorview.view.ColorTextView
            android:id="@+id/tv_popup_goods_add_shop_cart"
            style="@style/text_white_16_w_w"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/add_shop_cart"
            app:backgroundColorNormal="@color/color_green_light"
            app:cornerRadiusBottomLeftNormal="@dimen/dp_18"
            app:cornerRadiusTopLeftNormal="@dimen/dp_18" />

        <com.wei.android.lib.colorview.view.ColorTextView
            android:id="@+id/tv_popup_goods_buy_at_once"
            style="@style/text_white_16_w_w"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/buy_at_once"
            app:backgroundColorNormal="@color/color_green"
            app:cornerRadiusBottomRightNormal="@dimen/dp_18"
            app:cornerRadiusTopRightNormal="@dimen/dp_18" />
    </LinearLayout>
</com.wei.android.lib.colorview.view.ColorLinearLayout>
