<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:overScrollMode="never">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/comm_white"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginLeft="150dp">

                        <ImageButton
                            android:id="@+id/ib_sku_close"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/product_sku_close_selector"
                            android:padding="10dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/comm_close" />

                        <TextView
                            android:id="@+id/tv_sku_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginRight="15dp"
                            android:layout_marginBottom="3dp"
                            android:ellipsize="end"
                            android:includeFontPadding="false"
                            android:lines="1"
                            android:text="测试"
                            android:textColor="@color/comm_text_gray"
                            android:textSize="14dp" />

                        <LinearLayout
                            android:id="@+id/ll_sku_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_above="@id/tv_sku_info"
                            android:layout_marginRight="15dp"
                            android:layout_marginBottom="5dp"
                            android:gravity="bottom"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_sku_selling_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="-2dp"
                                android:gravity="bottom"
                                android:includeFontPadding="false"
                                android:text="$100"
                                android:textColor="@color/comm_price"
                                android:textSize="23dp" />

                            <TextView
                                android:id="@+id/tv_sku_selling_price_unit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:textColor="@color/comm_text_gray"
                                android:textSize="12dp" />
                        </LinearLayout>
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:background="@color/comm_line" />

                    <com.wuhenzhizao.sku.view.SkuSelectScrollView
                        android:id="@+id/scroll_sku_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp">

                        <TextView
                            android:id="@+id/tv_sku_quantity_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="15dp"
                            android:text="@string/product_detail_sku_quantity"
                            android:textColor="@color/comm_text_gray_dark"
                            android:textSize="15dp" />

                        <TextView
                            android:id="@+id/tv_sku_quantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@id/tv_sku_quantity_label"
                            android:text="(库存:489)"
                            android:textColor="@color/comm_text_gray"
                            android:textSize="11dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:focusable="true"
                            android:focusableInTouchMode="true"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/btn_sku_quantity_minus"
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:background="@drawable/com_sku_quantity_minus_selector"
                                android:enabled="false"
                                android:gravity="center"
                                android:padding="0dp"
                                android:text="－"
                                android:textColor="@color/quantity_operator_text_selector"
                                android:textSize="18dp" />

                            <EditText
                                android:id="@+id/et_sku_quantity_input"
                                android:layout_width="40dp"
                                android:layout_height="28dp"
                                android:layout_marginLeft="2dp"
                                android:layout_marginRight="2dp"
                                android:background="@drawable/com_sku_quantity_input_selector"
                                android:ellipsize="end"
                                android:gravity="center"
                                android:imeOptions="actionDone"
                                android:inputType="number"
                                android:maxWidth="100dp"
                                android:maxLength="5"
                                android:maxLines="1"
                                android:minWidth="21dp"
                                android:text="1"
                                android:textColor="@color/comm_text_gray_dark"
                                android:textSize="15dp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/btn_sku_quantity_plus"
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:layout_marginRight="15dp"
                                android:background="@drawable/com_sku_quantity_plus_selector"
                                android:gravity="center"
                                android:padding="0dp"
                                android:text="＋"
                                android:textColor="@color/quantity_operator_text_selector"
                                android:textSize="18dp" />

                        </LinearLayout>
                    </RelativeLayout>


                    <!--                    <Button-->
                    <!--                        android:id="@+id/btn_submit"-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="46dp"-->
                    <!--                        android:layout_marginTop="30dp"-->
                    <!--                        android:background="@drawable/comm_btn_red_selector"-->
                    <!--                        android:text="@string/product_detail_sku_confirm"-->
                    <!--                        android:textColor="@color/comm_white"-->
                    <!--                        android:textSize="17dp" />-->


                    <!--底部操作按钮-->
                    <LinearLayout
                        style="@style/hh_fi_wr"
                        android:layout_marginStart="11.5dp"
                        android:layout_marginTop="@dimen/dp_20"
                        android:layout_marginEnd="11dp"
                        android:layout_marginBottom="@dimen/dp_20"
                        android:orientation="horizontal">

                        <!--                        <com.wei.android.lib.colorview.view.ColorTextView-->
                        <!--                            android:id="@+id/tv_goods_sure"-->
                        <!--                            style="@style/text_white_16_f_w"-->
                        <!--                            app:backgroundColorNormal="@color/color_green_light"-->
                        <!--                            app:cornerRadiusBottomLeftNormal="@dimen/dp_18"-->
                        <!--                            app:cornerRadiusBottomRightNormal="@dimen/dp_18"-->
                        <!--                            app:cornerRadiusTopLeftNormal="@dimen/dp_18"-->
                        <!--                            app:cornerRadiusTopRightNormal="@dimen/dp_18"-->
                        <!--                            android:layout_height="36dp"-->
                        <!--                            android:gravity="center"-->
                        <!--                            android:text="@string/sure"-->
                        <!--                            android:visibility="gone" />-->


                        <com.wei.android.lib.colorview.view.ColorTextView
                            android:id="@+id/tv_goods_add_shop_cart"
                            style="@style/text_white_16_w_w"
                            android:layout_width="0dp"
                            android:layout_height="36dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/add_shop_cart"
                            app:backgroundColorNormal="@color/color_green_light"
                            app:cornerRadiusBottomLeftNormal="@dimen/dp_18"
                            app:cornerRadiusTopLeftNormal="@dimen/dp_18" />

                        <com.wei.android.lib.colorview.view.ColorTextView
                            android:id="@+id/tv_goods_buy_at_once"
                            style="@style/text_white_16_w_w"
                            android:layout_width="0dp"
                            android:layout_height="36dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/buy_at_once"
                            app:backgroundColorNormal="@color/color_green"
                            app:cornerRadiusBottomRightNormal="@dimen/dp_18"
                            app:cornerRadiusTopRightNormal="@dimen/dp_18" />
                    </LinearLayout>


                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_sku_logo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginLeft="15dp" />
            </FrameLayout>
        </ScrollView>
    </LinearLayout>
</layout>
